Resolves: tdf#128758 scrollbars added during scrolledwindow layout

Change-Id: I1eee32278f6b46ff4f0447eb39543836c3d687f0